Build: add is.debian compile target to build on debian with openjfx (including docker)
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3797 3d1905a2-6b24-0410-a738-b14d5a86fcbd